[tool.poetry]
authors = [
    "James Addison <james@reciperadar.com>",
]
classifiers=[
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"
]
description = "in-process search-engine for python"
license = "AGPL-3.0-or-later"
name = "hashedixsearch"
repository = "https://github.com/openculinary/hashedixsearch/"
version = "0.2.10"

[tool.poetry.dependencies]
hashedindex = "^0.10.0"
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = "^20.8b1"
flake8 = "^3.8.4"
unidecode = "^1.1.2"
