[tool.poetry]
authors = [
    "James Addison <james@reciperadar.com>",
]
classifiers=[
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"
]
description = "in-process search-engine for python"
license = "AGPL-3.0-or-later"
name = "hashedixsearch"
readme = "README.md"
repository = "https://github.com/openculinary/hashedixsearch/"
version = "1.1.1"

[tool.poetry.dependencies]
hashedindex = "^0.10.0"
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
unidecode = "^1.1.2"
